--- a/style.css
+++ b/style.css
@@ -10,10 +10,11 @@ body, html {
 #navbar {
     
     height: 40px;
-/*    background-color: #C0C0C0;*/
     padding-top: 10px;
     background-color: #772f1a;
-background-image: linear-gradient(315deg, #772f1a 0%, #f2a65a 74%);
+    background-image: linear-gradient(315deg, #772f1a 0%, #f2a65a 74%);
+    box-shadow: 0px 0px 3px 0px black;
+    margin-bottom: 3px; 
 
     
 }
@@ -55,7 +56,7 @@ h1 {
 .buttonContainer {
     
     
-    width: 300px;
+    width: 320px;
     height: 30px;
     margin: 0px auto;
     
